# IG1

./: README.md
AG/: CMakeLists.txt  Gajdos_Radu_712_lab2.rar  comenzi.txt  deSters.txt  quiz.txt
AG/lab1/: GraphAdjListe.cpp  GraphAdjListe.h  app.cpp
AG/lab2/: CMakeLists.txt  GraphKantListe.cpp  GraphKantListe.h  app.cpp  datahal.in
AG/lab3/: CMakeLists.txt  l3.cpp  labyrinth2.txt
AG/lab4/: CMakeLists.txt  Matrix.cpp  Matrix.h  file.txt  main.cpp
AG/lab5/: CMakeLists.txt  Graph.cpp  Graph.h  input.txt  main.cpp
AG/lab5_fin/: CMakeLists.txt  Graph.cpp  Graph.h  input.txt  main.cpp
AG/lab6/: AdjListe.cpp  AdjListe.h  CMakeLists.txt
AG/lab6_bun/: AdjListe.cpp  AdjListe.h  CMakeLists.txt  data.in  main.cpp
AG/lab6_fin/: CMakeLists.txt  GraphAdjListe.cpp  GraphAdjListe.h  main.cpp
AG/sem2/: sem2.docx
ASC/: Aufgabe1.lst  anall.txt  auf2.asm  auf2.lst  comenzi_h5.txt  function.asm  model.py  modul.asm  nasm.lnk  praktik.asm  praktik.lst  text.txt
ASC/asc practic/: ct_carac_speciale.asm  inlocuire_carac_speciale.asm  lista_frecventa.asm  pita_lu_dumnezo.asm  tastatura_in_variabila.asm  text_tastatura_in_fisier.asm
ASC/teme/: Gajdos_Radu_7121-practic.asm  Gajdos_Radu_7121-practic.lst  Gajdos_Radu_7121_1.asm  Gajdos_Radu_7121_1.lst  Gajdos_Radu_7121_11.asm  Gajdos_Radu_7121_11.lst  Gajdos_Radu_7121_16.asm  Gajdos_Radu_7121_16.lst  Gajdos_Radu_7121_17  Gajdos_Radu_7121_17..lst  Gajdos_Radu_7121_17.asm  Gajdos_Radu_7121_17.lst  output.txt
DSA/: pseudocod_tema2.txt  sem1.rar
DSA/Gajdos_SortedSet/: CMakeLists.txt  ExtendedTest.cpp  SortedSet.cpp  SortedSet.h  SortedSetIterator.cpp  SortedSetIterator.h
DSA/Gajdos_SortedSet/problema_lab1/: ShortTest.cpp  SortedSet.cpp  SortedSet.h  SortedSetIterator.cpp
DSA/IteratedList final/IteratedList (3)/: App.cpp  CMakeLists.txt  ExtendedTest.cpp  IteratedList.cpp  IteratedList.h  ListIterator.cpp  ListIterator.h  ShortTest.cpp  pseudocod.txt
DSA/IteratedList_nou/: CMakeLists.txt  IteratedList.cpp  IteratedList.h  ListIterator.cpp  ListIterator.h
DSA/Matrix_L2/: CMakeLists.txt
DSA/Matrix_L2/Matrix/: ExtendedTest.cpp  Matrix.cpp  Matrix.h  MatrixIterator.cpp  MatrixIterator.h
DSA/lab1_t/: App.cpp  CMakeLists.txt  (+5 more)
DSA/problema_lab1/: App.cpp  CMakeLists.txt  SortedSetIterator.h  specificatii.cpp
FP/: exam.rar  sem11.py  sem12.py  temo.py  text.txt
OOP/: aufgabe3.cpp  lab2.rar  sterge.c  tranzactii.txt
OOP/lab5_v2/: CMakeLists.txt  Elektroscooter.cpp  Elektroscooter.h  ScooterController.cpp  ScooterController.h  ScooterRepo.cpp  ScooterRepo.h  ScooterUI.cpp  ScooterUI.h  main.cpp  scooters.txt
SO/: Gajdos_Radu_712_1.c  L6.c  lab2.rar  temp.txt
(+210 files in other folders)
